                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.1

  *) [TS-1576] reload splitdns.config at runtime
     Author: Ethan Lai <yzlai@yahoo.com>

  *) [TS-1551] reload ssl_multicert.config at runtime
     Author: Ethan Lai <yzlai@yahoo.com>

  *) [TS-1572] Plugin response status change can trigger ATS assertion
     Author: Uri Shachar

  *) [TS-1433] to make read from writer work

  *) [TS-1564] fix the rolling of Logs created via the API in plugins
     Author: Craig Forbes <cforbes at qualys dot com>

  *) [TS-1565] TSStringPercentEncode returns one character short in no-op case
    (no encoding needed). Author: Thach Tran <tranngocthachs at gmail dot com>.

  *) [TS-1561] Plugin esi - Enhancements on ESI plugin

  *) [TS-1560] plugins need memory barriers for ARM

  *) [TS-1558] use_client_addr breaks control over upstream HTTP protocol version

  *) [TS-207] Add raw disk support for FreeBSD

  *) [TS-1494] sslCa should be set NULL after parseConfigLine in SSLCertLookup.cc

  *) [TS-1382] make jtest 64bit nice

  *) [TS-1550] remove unnecessary USE_CONFIG_PROCESSOR define

  *) [TS-1549] Drop MakeErrorVA, enabling body_factory by default

  *) [TS-1548] Update documentation for ip_allow.config
     Author: Nick Berry

  *) [TS-1223] fix the crash in http_ui show network connections

  *) [TS-1543] Enable non-debug logging for rfc5861 plugin

  *) [TS-1512] get volume & hosting work with cluster

  *) [TS-1542] Fix so that rfc5861 plugin will compile against older versions of TS

  *) [TS-1446] Make sure age header is enabled in rfc5861 plugin

  *) [TS-1539] Update build package list in README

  *) [TS-1535] FetchSM process_fetch_write should ignore event TS_EVENT_VCONN_WRITE_READY

  *) [TS-1534] implement the interim cache for ESI parser result

  *) [TS-1501] vc`s inactivity_timeout event should be schedule in vc`s thread

  *) [TS-1503] make Event::schedule simple and efficient