@@ -16,13 +16,22 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-AM_CPPFLAGS = -I$(top_builddir)/proxy/api/ts -std=c++11
+includedir=$(prefix)/include/ts
+
+AM_CPPFLAGS = -I$(top_builddir)/proxy/api/ts
   
+if BUILD_HAVE_CXX_11
+
+if BUILD_HAVE_LIBCXX
+AM_CXXFLAGS = -stdlib=libc++
+endif
+
 lib_LTLIBRARIES = libatscpp11api.la
 
 libatscpp11api_la_SOURCES = \
   cpp11api.cc
   
-includedir=$(prefix)/include/ts
 include_HEADERS = \
   ts-cpp11.h ts-cpp11-headers.h
+
+endif # BUILD_HAVE_CXX_11
